deploy: f1a9e8335e67fc4f8e61f6398c666668ccdf1ccd

--- a/B-MIN-17/manifest.json
+++ b/B-MIN-17/manifest.json
@@ -9,7 +9,8 @@
     },
     "summary": {
         "en": [
-            "The miniature appears to be in a good state of preservation and no retouching materials are evident.\nSome unusual features are evident, like the painting technique used for the mouth and eyes or the mixture of azurite and smalt used to paint the blue background."
+            "This miniature of John Donne is likely to be a copy after the version in the Royal Collection (RCIN 420026), also featured on this website.",
+            "The miniature has been retouched with smalt in the background and zinc white in the collar. This could indicate two different campaigns of intervention.\nTechnically, in comparison with the version in the Royal Collection (RCIN 420026), it is executed quite differently. It lacks the controlled stippling technique and the precise modelling of the original. Materially, there is a great deal of overlaps with RCIN 420026, however vermilion, used in the lips, is only present in this version and appears not to have been part of the palette of RCIN 420026."
         ]
     },
     "requiredStatement": {
